lab/istio/httpbin/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
spec:
  replicas: 1

  selector:
    matchLabels:
      app: httpbin
      version: v1

  template:
    metadata:
      labels:
        app: httpbin
        version: v1
    spec:
      containers:
        - name: httpbin
          image: docker.io/kennethreitz/httpbin:latest
          ports:
            - name: http-web
              protocol: TCP
              containerPort: 80

          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
