lab/istio/httpbin/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  labels:
    app: httpbin
spec:
  selector:
    app: httpbin

  type: ClusterIP

  ports:
    - name: http
      port: 8000
      targetPort: http-web
