lab/istio/httpbin/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
  namespace: dev
spec:
  hosts:
  - "httpbin.example.com"
  gateways:
  - ingress-gateway-demo
  http:
  - route:
    - destination:
        host: httpbin
        port:
          number: 8000
